--- a/index.css
+++ b/index.css
@@ -190,6 +190,7 @@ section {
 .has-dropdown.dropdown-open > .dropdown-menu {
     opacity: 1;
     visibility: visible;
+    margin-left: 50%;
     transform: translateX(-50%) translateY(0);
 }
 
@@ -2668,7 +2669,6 @@ a.contact-email:hover {
     #main-nav li {
         width: 100%;
         border-bottom: 1px solid var(--border-color);
-        overflow: visible;
     }
     .nav-link {
         padding: 1rem 1.5rem;
@@ -2688,13 +2688,13 @@ a.contact-email:hover {
         padding: 0;
         margin: 0;
         display: none;
-        overflow: visible;
     }
     .has-dropdown.dropdown-open > .dropdown-menu {
         display: block;
     }
     .dropdown-menu a {
         padding-left: 2.5rem;
+        margin-left: auto;
         background-color: var(--surface-color);
     }
 
@@ -3635,87 +3635,5 @@ position: absolute;
     .mobile-nav-ctas .btn {
         width: 100%;
         text-align: center;
-    }
-}
-
-
-/* --- Language Switcher --- */
-.language-switcher {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    margin-left: 1rem; /* Add some space from the last nav item */
-}
-
-.language-switcher .nav-link {
-    color: #888;
-    padding-bottom: 5px;
-    position: relative; /* For the active state underline */
-}
-
-.language-switcher .nav-link:hover {
-    color: var(--text-color);
-}
-
-.language-switcher .nav-link.lang-active {
-    color: var(--text-color);
-    font-weight: 700;
-    cursor: default;
-}
-
-.language-switcher .nav-link.lang-active::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: var(--text-color);
-    border-radius: 1px;
-}
-
-/* Override to remove main nav link active state from language switcher */
-.language-switcher .nav-link.active::after {
-    display: none;
-}
-
-.language-switcher .lang-separator {
-    color: #ccc;
-    align-self: center;
-    padding-bottom: 5px;
-}
-
-/* RTL Support (Placeholder for future Arabic version) */
-/*
-html[dir="rtl"] {
-    --text-align-start: right;
-    --text-align-end: left;
-}
-html[dir="rtl"] .main-header .container {
-    flex-direction: row-reverse;
-}
-html[dir="rtl"] #main-nav > ul {
-    flex-direction: row-reverse;
-}
-html[dir="rtl"] .has-dropdown i {
-    transform: rotate(180deg);
-}
-*/
-
-@media (max-width: 992px) {
-    .language-switcher {
-        padding: 1rem 1.5rem;
-        margin-left: 0;
-        width: 100%;
-        justify-content: center;
-        border-top: 1px solid var(--border-color);
-        order: 99; /* Push it towards the bottom of the nav stack */
-    }
-    .language-switcher .nav-link,
-    .language-switcher .lang-separator {
-        padding-bottom: 0;
-    }
-    .language-switcher .nav-link.lang-active::after {
-        display: none; /* No underline on mobile */
     }
 }
