--- a/index.css
+++ b/index.css
@@ -1569,7 +1569,7 @@ section {
     position: absolute;
     width: 180px;
     height: auto;
-    top: -50px;
+    top: 0;
     right: 9%;
     z-index: 5;
     pointer-events: none;
