--- a/rtl.css
+++ b/rtl.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4, .btn, .nav-link, .timer-unit p {
 
 .has-dropdown.dropdown-open > .dropdown-menu {
   margin-left: auto;
-  margin-right: 50%;
+  margin-right: 0;
   transform: translateX(50%) translateY(0);
 }
 
